checking if the code is reprenished

--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <hi>Bu bir testdir </hi>
+    <table>
+        <tr>
+            <th>Ad</th>
+            <th>Soyad</th>
+        </tr>
+        <tr>
+            <td>Emil</td>
+            <td>Huseynli</td>
+        </tr>
+    </table>
 </body>
 </html>
